--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
